--- a/src/app/home/operation/credit-note/credit-note.component.html
+++ b/src/app/home/operation/credit-note/credit-note.component.html
@@ -2,36 +2,30 @@
     <h2>Credit Note</h2>
 </div>
 <div class="container mt-4">
-    <div class="col-md-8 mx-auto">
-        <div class="card">
-            <div class="card-body">
-                <div class="col-md-8 mx-auto">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label class="form-label2">BL No</label>
-                                <input type="text" class="form-control2">
-                            </div>
-                        </div>
-                        <div class="col-md-6 mt-4">
-                            <button class="form-btn-primary w-100">Get Details</button>
-                        </div>
-                    </div>
-                    <div class="col-md-8 mt-4">
-                        <div class="form-group">
-                            <ng-select>
-                                <ng-option value="" selected disabled>--Select--</ng-option>
-                                <ng-option value="INV8789">INV8789</ng-option>
-                                <ng-option value="INV8090">INV8090</ng-option>
-                            </ng-select>
-                            <label class="form-label-ddl">Invoice</label>
-                        </div>
-                    </div>
-                    <div class="col-md-6 offset-md-2 mt-4">
-                        <button class="form-btn w-100" (click)="createCreditNote()">Create Credit Note</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="table-responsive">
+        <table class="ratetable" id="data-table-config">
+            <thead>
+                <tr>
+                    <th>No</th>
+                    <th>Invoice No</th>
+                    <th>Name</th>
+                    <th>BL No</th>
+                    <th>Invoice Date</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let item of creditList;let i = index">
+                    <td>{{i +1}}</td>
+                    <td>{{item.INVOICE_NO}}</td>
+                    <td>{{item.INVOICE_FOR}}</td>
+                    <td>{{item.BL_NO}}</td>
+                    <td>{{item.CREATED_DATE | date:'mediumDate'}}</td>
+                    <td><i class="fa fa-eye pointer"></i>
+                        <button class="d-none" #openBtn href="#invoiceModal" data-bs-toggle="modal"></button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
