--- a/src/app/home/operation/new-receipt/new-receipt.component.scss
+++ b/src/app/home/operation/new-receipt/new-receipt.component.scss
@@ -1,9 +1,11 @@
 .ratetable thead th {
-  padding: 10px;
+  padding: 7px;
+  font-size: 11px;
 }
 
 .ratetable tbody td {
-  padding: 10px;
+  padding: 7px;
+  font-size: 11px;
 }
 
 .subtable thead th {
@@ -15,8 +17,4 @@
 .subtable tbody td {
   padding: 6px;
   font-size: 10px;
-}
-
-.subtable {
-  border: 1px solid;
 }
