--- a/src/app/home/operation/invoice-list2/invoice-list2.component.scss
+++ b/src/app/home/operation/invoice-list2/invoice-list2.component.scss
@@ -6,3 +6,13 @@ thead > tr {
   text-transform: none;
   font-size: 0.7rem;
 }
+
+.ratetable thead th {
+  padding: 7px;
+  font-size: 11px;
+}
+
+.ratetable tbody td {
+  padding: 7px;
+  font-size: 11px;
+}
