--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -670,7 +670,7 @@ section {
 .services .icon-box {
   padding: 20px;
   position: relative;
-  overflow: hidden;
+  /* overflow: hidden; */
   margin: 10px;
   background: #fff;
   box-shadow: 0 5px 26px 0 rgba(68, 88, 144, 0.14);
